testing pre-commit

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,12 @@
-requests
 beautifulsoup4
-pandas
-Faker
-apache-airflow
-apache-airflow-providers-amazon
-apache-airflow-providers-databricks
-boto3
-sqlalchemy
-psycopg2
-databricks-sql-connector
-streamlit
-python-dotenv
+dbt-cloud
+dbt-snowflake
 loguru
-dbt-core
-dbt-databricks
-flake8
+pandas
 pre-commit
+psycopg2
+python-dotenv
+requests
+sqlalchemy
+sqlfluff
+streamlit
